--- a/notebook/document.ipynb
+++ b/notebook/document.ipynb
@@ -1,14 +1,129 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75f5ee63",
+   "metadata": {},
+   "source": [
+    "### Data Ingestion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31bbc345",
+   "execution_count": 2,
+   "id": "db2abceb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "###"
+    "from langchain_core.documents import Document"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "06e53fcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.makedirs(\"../data/text_files\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fba2a680",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Sample text files created!\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_texts={\n",
+    "    \"../data/text_files/python_intro.txt\":\"\"\"Python Programming Introduction\n",
+    "\n",
+    "Python is a high-level, interpreted programming language known for its simplicity and readability.\n",
+    "Created by Guido van Rossum and first released in 1991, Python has become one of the most popular\n",
+    "programming languages in the world.\n",
+    "\n",
+    "Key Features:\n",
+    "- Easy to learn and use\n",
+    "- Extensive standard library\n",
+    "- Cross-platform compatibility\n",
+    "- Strong community support\n",
+    "\n",
+    "Python is widely used in web development, data science, artificial intelligence, and automation.\"\"\",\n",
+    "    \n",
+    "    \"../data/text_files/machine_learning.txt\": \"\"\"Machine Learning Basics\n",
+    "\n",
+    "Machine learning is a subset of artificial intelligence that enables systems to learn and improve\n",
+    "from experience without being explicitly programmed. It focuses on developing computer programs\n",
+    "that can access data and use it to learn for themselves.\n",
+    "\n",
+    "Types of Machine Learning:\n",
+    "1. Supervised Learning: Learning with labeled data\n",
+    "2. Unsupervised Learning: Finding patterns in unlabeled data\n",
+    "3. Reinforcement Learning: Learning through rewards and penalties\n",
+    "\n",
+    "Applications include image recognition, speech processing, and recommendation systems\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "}\n",
+    "\n",
+    "for filepath,content in sample_texts.items():\n",
+    "    with open(filepath,'w',encoding=\"utf-8\") as f:\n",
+    "        f.write(content)\n",
+    "\n",
+    "print(\"✅ Sample text files created!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0bf4eeee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import TextLoader\n",
+    "\n",
+    "loader = TextLoader(\"../data/text_files/python_intro.txt\", encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf36e8ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Document(metadata={'source': '../data/text_files/python_intro.txt'}, page_content='Python Programming Introduction\\n\\nPython is a high-level, interpreted programming language known for its simplicity and readability.\\nCreated by Guido van Rossum and first released in 1991, Python has become one of the most popular\\nprogramming languages in the world.\\n\\nKey Features:\\n- Easy to learn and use\\n- Extensive standard library\\n- Cross-platform compatibility\\n- Strong community support\\n\\nPython is widely used in web development, data science, artificial intelligence, and automation.')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "document = loader.load()\n",
+    "\n",
+    "print(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "637a033b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -18,7 +133,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.10"
   }
  },
